# hdr-snipping-tool

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  app-design.txt  compile_shaders.txt  icon.rc  technical-details.md  version2.md
crates/hdr-capture/: Cargo.toml
crates/hdr-capture/src/: bounds.rs  capture.rs  capture_info.rs  capture_provider.rs  display_info.rs  lib.rs  tonemapper.rs
crates/hdr-capture/src/capture/: display_info.rs  hdr_capture.rs  sdr_capture.rs  selection.rs
crates/hdr-capture/src/hdr_capture/: drop.rs  import.rs  mod.rs
crates/hdr-capture/src/maximum/: buffer_pass.rs  mod.rs  source_pass.rs
crates/hdr-capture/src/rect/: mod.rs
crates/hdr-capture/src/selection/: mod.rs
crates/hdr-capture/src/tonemap/: mod.rs
crates/hdr-snipping-tool/: Cargo.toml  build.rs  icon.rc  manifest.xml
crates/hdr-snipping-tool/src/: app.rs  config.rs  gui_backend.rs  hotkey.rs  logger.rs  main.rs  message_box.rs  renderer_thread.rs  report_error.rs  selection.rs  settings.rs
crates/hdr-snipping-tool/src/active_app/: adjust_tonemap_settings.rs  clear_capture.rs  create_tray_icon.rs  create_window.rs  handle_tray_icon.rs  mod.rs  take_capture.rs  tray_icon.rs
crates/hdr-snipping-tool/src/active_capture/: capture_image.rs  drop.rs  mod.rs  save.rs  selection.rs
crates/hdr-snipping-tool/src/app/: about_to_wait.rs  app_event.rs  clear_capture.rs  handle_capture.rs  init.rs  keybinds.rs  keyboard_input.rs  mouse_guides.rs  mouse_wheel.rs  redraw.rs  save.rs  selection.rs  settings.rs  take_capture.rs  tray_icon.rs  update_tonemapper_settings.rs  user_event.rs  window_event.rs  window_info.rs
crates/hdr-snipping-tool/src/application/: capture.rs  capture_resources.rs  capture_saver.rs  capture_taker.rs  core_resources.rs  events.rs  mod.rs  renderer.rs  winit_applicaiton.rs
crates/hdr-snipping-tool/src/application_event_loop/: mod.rs  tray_icon.rs
crates/hdr-snipping-tool/src/capture_saver/: capture_saver_thread.rs  mod.rs
crates/hdr-snipping-tool/src/capture_taker/: capture_taker_thread.rs  mod.rs
crates/hdr-snipping-tool/src/gui_backend/: imgui_winit_support.rs  utils.rs
crates/hdr-snipping-tool/src/init/: mod.rs  only_instance.rs  settings.rs
crates/hdr-snipping-tool/src/settings/: load.rs  old_settings.rs
crates/hdr-snipping-tool/src/utilities/: directories.rs  failure.rs  mod.rs  windows_helpers.rs
crates/hdr-snipping-tool/src/windows_helpers/: foreground_window.rs  mod.rs
crates/hdr-snipping-tool/src/winit_app/: clear_capture.rs  mod.rs  report_error.rs  window_event.rs
crates/memory-test/: Cargo.toml
crates/memory-test/src/: app.rs  main.rs
crates/scrgb-tonemapper/: Cargo.toml
crates/scrgb-tonemapper/src/: find_maximum.rs  lib.rs  sample.rs  tonemap.rs  whitepoint.rs
crates/scrgb-tonemapper/src/maximum/: buffer_pass.rs  mod.rs  source_pass.rs
crates/scrgb-tonemapper/src/shaders/: maximum.comp  maximum.spv  maximum_buffer_pass.comp  maximum_buffer_pass.spv  maximum_source_pass.comp  maximum_source_pass.spv  scRGB_to_sRGB.comp  scRGB_to_sRGB.spv
crates/scrgb-tonemapper/src/tonemap_output/: copy_to_box.rs  mod.rs
crates/scrgb-tonemapper/tests/: maximum.rs  tonemap.rs  tonemap_output_to_cpu.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/vulkan/: Cargo.toml  README.md  build.rs
crates/vulkan-backend/: Cargo.toml
crates/vulkan-backend/shaders/compute/: tonemap.comp
crates/vulkan-backend/shaders/fragment/: border.frag  border.spv  capture.frag  capture.spv  final.frag  final.spv  mouse.frag  mouse.spv  selection.frag  selection.spv
crates/vulkan-backend/shaders/vertex/: capture.spv  capture.vert  subpass.vert
crates/vulkan-backend/src/: allocators.rs  create_backend.rs  create_instance.rs  lib.rs  renderer.rs  texture.rs  tonemapper.rs
crates/vulkan-backend/src/create_instance/: aquire_instance.rs  logical_device.rs
crates/vulkan-backend/src/renderer/: framebuffer.rs  render.rs  renderpass_border.rs  renderpass_capture.rs  renderpass_final.rs  renderpass_mouse.rs  renderpass_selection.rs  vertex.rs
crates/vulkan-backend/src/shaders/: fragment.frag  fragment.spv  maximum_reduction.spv  tonemap.spv  vertex.spv  vertex.vert
crates/vulkan-backend/src/texture/: copy_to_cpu.rs
crates/vulkan-backend/src/tonemapper/: active_tonemapper.rs  load_capture.rs  maximum_reducer.rs  tonemap.rs  utils.rs
crates/vulkan-renderer/: Cargo.toml
crates/vulkan-renderer/src/: graphics_pipeline.rs  lib.rs  new.rs  plane.rs  render.rs  swapchain.rs  vertex.rs  vertex_index_buffer.rs
crates/vulkan-renderer/src/border/: drop.rs  mod.rs  render.rs
crates/vulkan-renderer/src/border_pipeline/: border.rs  mod.rs
crates/vulkan-renderer/src/capture/: drop.rs  load.rs  mod.rs  render.rs
crates/vulkan-renderer/src/capture_pipeline/: capture.rs  mod.rs  vertex.rs
crates/vulkan-renderer/src/glyph_cache/: mod.rs  request_glyphs.rs
crates/vulkan-renderer/src/mouse_guides/: drop.rs  mod.rs  render.rs
crates/vulkan-renderer/src/mouse_pipeline/: mod.rs  mouse.rs  vertex.rs
crates/vulkan-renderer/src/objects/: border.rs  capture.rs  mod.rs  mouse_guides.rs  selection.rs
crates/vulkan-tonemapper/: Cargo.toml
crates/vulkan-tonemapper/src/: find_maximum.rs  lib.rs
crates/vulkan/layers/: VkLayer_khronos_shader_object.json
crates/vulkan/src/: hdr_image.rs  lib.rs  sdr_image.rs
crates/vulkan/tests/: hdr_image.rs  hdr_scanner.rs  vulkan.rs
crates/vulkan/vulkan_profiles/: vulkan_profiles.cpp
crates/windows-capture-provider/: Cargo.toml
crates/windows-capture-provider/src/: capture.rs  capture_item_cache.rs  d3d_devices.rs  directx.rs  display.rs  enumerate_displays.rs  fetch_capture.rs  get_capture.rs  lib.rs  prepare_capture.rs  refresh_displays.rs  result.rs  send.rs
crates/windows-capture-provider/tests/: capture.rs  capture_item_cache.rs  directx.rs  monitor.rs  windows_capture_provider.rs
crates/windows-hdr-capture-provider/: Cargo.toml
crates/windows-hdr-capture-provider/src/: d3d_device.rs  get_display.rs  lib.rs  prepare_capture.rs  process_frame.rs
(+329 files in other folders)
