[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Error Handling
thiserror = "2"
windows-result = { version = "0.3" }

# Primitive types
bytemuck = { version = "1.21", default-features = false, features = ["derive"] }
half = { version = "2.4" }

# Windows API
windows = { version = "0.61" }
windows-core = { version = "0.61" }

# Windowing
raw-window-handle = "0.6"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

# Vulkan
ash = { version = "0.38", default-features = false, features = ["debug", "std"] }
ash-helper = { git = "https://github.com/trentshailer/ash-helper", rev = "588e56c", features = [
    "vk-global-allocator",
] }
ash-window = { version = "0.13" }
parking_lot = "0.12"
vulkan = { path = "crates/vulkan" }

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Saving Screenshot
image = { version = "0.25", default-features = false }

# Taking Screenshot
windows-capture-provider = { path = "crates/windows-capture-provider" }

# Utilities
utilities = { path = "crates/utilities" }

# Random data
rand = "0.9"

# Allocator
mimalloc = { version = "0.1" }

[workspace.lints.rust]
"deprecated_in_future" = "warn"
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[workspace.lints.clippy]
"alloc_instead_of_core" = "warn"
"std_instead_of_alloc" = "warn"
"std_instead_of_core" = "warn"

"cast_lossless" = "warn"
"inconsistent_struct_constructor" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"

"clone_on_ref_ptr" = "warn"
"default_trait_access" = "warn"
"todo" = "warn"

"missing_safety_doc" = "allow"
