[package]
name = "hdr-capture"
version = "1.4.0"
edition = "2021"

[dependencies]
imgui = { version = "0.11.0", optional = true }

chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
image = { version = "0.24.8", default-features = false, features = ["png"] }
rayon = "1.9.0"
snafu = "0.8.0"
winit = { version = "0.29.13", default-features = false }

[features]
imgui-settings-renderer = ["dep:imgui"]
