[package]
name = "hdr-snipping-tool"
version = "3.2.1"
edition = "2021"

build = "build.rs"

[dependencies]
vulkan-instance = { workspace = true }
vulkan-renderer = { workspace = true }
hdr-capture = { workspace = true }
windows-capture-provider = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
windows = { workspace = true, features = [
	"Foundation",
	"Graphics_Capture",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }
windows-result = { workspace = true }
winit = { workspace = true }
half = { workspace = true }
ash = { workspace = true }
image = { workspace = true }

tracing-subscriber = "0.3"
tracing-appender = "0.2"
arboard = "3.4"
chrono = { version = "0.4", features = [
	"clock",
	"std",
], default-features = false }
directories = "5.0"
global-hotkey = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tray-icon = "0.14"

[build-dependencies]
embed-resource = "2.4"
