[package]
name = "hdr-snipping-tool"
version = "4.0.0"
edition = "2021"

build = "build.rs"

[dependencies]
# Taking Screenshot
ash = { workspace = true }
vulkan = { workspace = true }
ash-helper = { workspace = true }
parking_lot = { workspace = true }
windows-capture-provider = { workspace = true }
global-hotkey = "0.6"

# User config
serde = { workspace = true }
toml = { workspace = true }
# See also dirs-rs

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Saving Screenshot
image = { workspace = true }
arboard = "3.4"
chrono = { version = "0.4", features = [
	"clock",
	"alloc",
], default-features = false }
dirs = "6.0"

# Windowing
winit = { workspace = true }
tray-icon = { version = "0.19", default-features = false }

# Windows API
windows = { workspace = true, features = ["Win32_System_Threading"] }

# Allocator
mimalloc = { workspace = true }

[features]
mimalloc_debug = ["mimalloc/debug"]

[build-dependencies]
embed-resource = "3.0"
