[package]
name = "scrgb-tonemapper"
version = "3.0.0"
edition = "2021"

[dependencies]
vulkan-instance = { workspace = true }
windows-capture-provider = { workspace = true }

half = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
