[package]
name = "scrgb-tonemapper"
version = "3.0.0"
edition = "2021"

[dependencies]
vulkan-instance = { workspace = true }
windows-capture-provider = { workspace = true }

half = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ash = { workspace = true }
smallvec = { workspace = true }
