[package]
name = "testing"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace packages
vulkan = { workspace = true }
windows-capture-provider = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# Primitive types
half = { workspace = true }

# Vulkan
ash = { workspace = true, features = ["linked"] }
ash-helper = { workspace = true }
parking_lot = { workspace = true }

# Windowing
winit = { workspace = true }
raw-window-handle = { workspace = true }

# Config
serde = { workspace = true }
toml = { workspace = true }

# Image
image = { workspace = true, features = ["rayon", "png"] }

# Generating Data
rayon = "1.10"
rand_distr = "0.5"
rand = { workspace = true }

# Compressing raw-hdr-capture
flate2 = "1.0"

# Allocator
mimalloc = { workspace = true, features = ["debug"] }
