[package]
name = "testing"
version = "0.2.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace packages
vulkan = { workspace = true }
windows-capture-provider = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }


# Vulkan
ash = { workspace = true, features = ["linked"] }
ash-helper = { workspace = true }
parking_lot = { workspace = true }

# Windowing
winit = { workspace = true }
raw-window-handle = { workspace = true }

# Image
image = { workspace = true, features = ["rayon", "png"] }

# Allocator
mimalloc = { workspace = true, features = ["debug"] }
