[package]
name = "testing"
version = "0.3.0"

publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace packages
vulkan = { workspace = true }
windows-capture-provider = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# Vulkan
ash = { workspace = true, features = ["linked"] }
ash-helper = { workspace = true }
parking_lot = { workspace = true }

# Windowing
raw-window-handle = { workspace = true }
winit = { workspace = true }

# Image
image = { workspace = true, features = ["png", "rayon"] }

# Allocator
mimalloc = { workspace = true, features = ["debug"] }
