[package]
name = "vulkan-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdr-capture = { workspace = true }

half = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true, features = ["rwh_05"] }
