[package]
name = "vulkan-renderer"
version = "1.5.0"
edition = "2021"

[dependencies]
vulkan-instance = { workspace = true }
scrgb = { workspace = true }

log = { workspace = true }
thiserror = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
smallvec = { workspace = true }

fontdue = "0.9"
