[package]
name = "vulkan-renderer"
version = "2.0.0"
edition = "2021"

[dependencies]
vulkan-instance = { workspace = true }
scrgb-tonemapper = { workspace = true }

tracing = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
