[package]
name = "vulkan-tonemapper"
version = "1.2.0"
edition = "2021"

[dependencies]
vulkan-instance = { workspace = true }

half = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
