[package]
name = "vulkan"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Logging
tracing = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Better Mutex
parking_lot = { workspace = true }

# Vulkan
ash = { workspace = true, features = ["linked"] }
ash-helper = { workspace = true }
vp-ash = { git = "https://github.com/trentshailer/vulkan-profiles-ash", branch = "vulkan-sdk-1.4.304", features = [
    "debug",
    "VK_USE_PLATFORM_WIN32_KHR",
    "VK_ENABLE_BETA_EXTENSIONS",
] }

# Windowing
raw-window-handle = { workspace = true }
ash-window = { workspace = true }

# Primitive Types
half = { workspace = true }
bytemuck = { workspace = true }

# Utilities
utilities = { workspace = true }

[dev-dependencies]
# Generating Data
rayon = "1.10"
rand_distr = "0.5"
rand = { workspace = true }
half = { workspace = true }
windows-capture-provider = { workspace = true }

[lints]
workspace = true
