[package]
name = "vulkan"
version = "0.7.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Logging
tracing = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Better Mutex
parking_lot = { workspace = true }

# Vulkan
ash = { workspace = true, features = ["linked"] }
ash-helper = { workspace = true }
vp-ash = { git = "https://github.com/trentshailer/vulkan-profiles-ash", branch = "vulkan-sdk-1.4.304", features = [
    "VK_ENABLE_BETA_EXTENSIONS",
    "VK_USE_PLATFORM_WIN32_KHR",
    "debug",
] }

# Windowing
ash-window = { workspace = true }
raw-window-handle = { workspace = true }

# Primitive Types
bytemuck = { workspace = true }
half = { workspace = true }

# Utilities
utilities = { workspace = true }

[dev-dependencies]
# Generating Data
half = { workspace = true }
rand = { workspace = true }
rand_distr = "0.5"
rayon = "1.10"
windows-capture-provider = { workspace = true }

[lints]
workspace = true
