[package]
name = "windows-capture-provider"
version = "4.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
windows = { workspace = true, features = [
	"Graphics_DirectX_Direct3D11",
	"Win32_Devices_Display",
	"Win32_Graphics_Direct3D_Fxc",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Gdi",
	"Win32_System_WinRT_Direct3D11",
	"Win32_System_WinRT_Graphics_Capture",
] }
windows-core = { workspace = true }
windows-result = { workspace = true }
tracing = { workspace = true }
