[package]
name = "windows-capture-provider"
version = "6.2.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Logging
tracing = { workspace = true }

# Error Handling
thiserror = { workspace = true }
windows-result = { workspace = true }

# Windows API
windows = { workspace = true, features = [
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Devices_Display",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { workspace = true }

[lints]
workspace = true
