[package]
name = "windows-hdr-capture-provider"
version = "1.4.0"
edition = "2021"

[dependencies]
snafu = "0.8.1"
rayon = "1.9.0"
log = "0.4.21"
hdr-capture = { path = "../hdr-capture" }
windows = { version = "0.52.0", features = [
	"Foundation",
	"Graphics_Capture",
	"Graphics_DirectX_Direct3D11",
	"Win32_Foundation",
	"Win32_Graphics_Direct3D_Fxc",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Gdi",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_System_WinRT_Direct3D11",
	"Win32_System_WinRT_Graphics_Capture",
	"Win32_UI_WindowsAndMessaging",
] }
winit = { version = "0.29.13", default-features = false }
